--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,28 +1,24 @@
 .header__lang-link {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   margin: 0;
   color: #FFF;
-  text-decoration: none;  
+  text-decoration: none;
   font-family: Inter;
   font-size: 24px;
   font-weight: 400;
   line-height: 28px;
   text-align: right;
-  height: 28px;
-  width: 29px;
+  min-height: 28px;
+  max-width: 29px;
   padding: 0;
 }
-  
-.header__lang-link_active {
-  width: 30px;
-  padding: 0 18px 0 0;
-}
+
 @media screen and (max-width : 320px) {
   .header__lang-link {
     height: 20px;
     width: 22px;
     font-size: 18px;
     line-height: 20px;
-  } 
+  }
 }
 
