--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -2,5 +2,9 @@
   border: 1px solid red;
   list-style-type: none;
   display: flex;
+  align-content: center;
+  justify-content: space-between;
+  gap: 18px;
   margin: 18px 0 0 0;
+  padding: 0;
 }
