--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,7 +3,7 @@
   height: 52px;
   width: 176px;
   object-fit: cover;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 @media screen and (max-width : 320px) {
