--- a/pages/index1.css
+++ b/pages/index1.css
@@ -1,7 +1,7 @@
 
 .body {
   margin: 0;
-  border: 1px solid rgb(0, 255, 21);
+  /*border: 1px solid rgb(0, 255, 21);*/
   max-width: 1280px;
   min-width: 320px;
 }
@@ -19,7 +19,13 @@
   background-color: #2A2C2F;
   color: #FFF;
   box-sizing: border-box;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
+}
+@media screen and (max-width : 320px) {
+  .page {
+    padding: 16px 0 0 0;
+ }
+
 }
 
 
@@ -31,152 +37,139 @@
   align-items: center;
 }
 
-
-.lead {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid red;
-  color: #FFF;
-  max-height: 1005px;
-  min-height: 406px;
-  max-width: 984px;
-  min-width: 320px;
- }
-
-.lead__title {
-  margin: 0 0 32px 0;
-  min-height: 200px;
-  max-width: 720px;
-  font-family: Inter;
-  font-size: 96px;
-  font-weight: 900;
-  line-height: 100px;
-  text-align: center;
-  border: 1px solid red;
-}
-
-@media screen and (max-width : 768px) {
-  .lead__title {
-    font-size: calc(40px + (96 - 40) * (100vw - 320px) / (768 - 320));
-    line-height: calc(44px + (100 - 44) * (100vw - 320px) / (768 - 320));
-    min-height: calc(44px + (200 - 88) * (100vw - 320px) / (768 - 320));
-    max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
-    margin-bottom: calc(16px + (32 - 16) * (100vw - 320px) / (768 - 320));
-  }
-}
-
-
-@media screen and (max-width : 320px) {
-  .lead__title {
-    min-height: 88px;
-    max-width: 288px;
-    font-size: 40px;
-    line-height: 44px;
-    margin: 0 0 16px 0;
-    min-height: 88px;
-    max-width: 288px;
-  }
-}
-
-
-
-.lead__subtitle {
-  margin: 0 0 64px 0;
-  min-height: 72px;
-  max-width: 640px;
-  font-family: Inter;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 36px;
-  text-align: center;
-  border: 1px solid red;
-}
-
-@media screen and (max-width : 1024px) {
-  .lead__subtitle {
-    margin-bottom: calc(56px + (64 - 56) * (100vw - 768px) / (1024 - 768));
-  }
-}
-
-@media screen and (max-width : 768px) {
-  .lead__subtitle {
-    font-size: calc(16px + (30 - 16) * (100vw - 320px) / (768 - 320));
-    line-height: calc(20px + (36 - 20) * (100vw - 320px) / (768 - 320));
-    min-height: calc(40px + (72 - 40) * (100vw - 320px) / (768 - 320));
-    max-width: calc(288px + (640 - 288) * (100vw - 320px) / (768 - 320));
-    margin-bottom: calc(40px + (56 - 40) * (100vw - 320px) / (768 - 320));
-  }
-}
-
-
-@media screen and (max-width : 320px) {
-  .lead__subtitle {
-    min-height: 40px;
-    max-width: 288px;
-    font-size: 16px;
-    line-height: 20px;
-    margin: 0 0 40px 0;
-  }
-}
-
-.lead__box {
-
+.intro {
+  min-height: 429px;
+  max-width: 690px;
+  /*border: 1px solid red;*/
   display: flex;
   flex-direction: column;
   align-items:flex-start;
   margin: 0;
-
+  padding: 92px 442px 92px 148px;
 }
-
-.lead__image {
-  border: 1px solid red;
-  object-fit: cover;
-  max-height: 615px;
-  max-width: 984px;
-}
-
 @media screen and (max-width: 1280px) {
-  .lead__image {
-    height: calc(580px + (615 - 580) * (100vw - 1024px) / (1280 - 1024));
-    width: calc(928px + (984 - 928) * (100vw - 1024px) / (1280 - 1024));
+  .intro {
+    /*padding: 92px 442px 92px 148px;*/
+    padding-right: calc(286px + (442 - 286) * (100vw - 1024px) / (1280 - 1024));
+    padding-left:  calc(48px + (148 - 48) * (100vw - 1024px) / (1280 - 1024));
   }
 }
 
 @media screen and (max-width: 1024px) {
-  .lead__image {
-   /*height: 580px;
-    width: 928px;*/
-    height: calc(480px + (580 - 480) * (100vw - 768px) / (1024 - 768));
-    width: calc(760px + (984 - 768) * (100vw - 768px) / (1024 - 768));
+  .intro {
+    /*padding: 92px 286px 92px 48px;*/
+    padding-top: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
+    padding-right: calc(24px + (286 - 24) * (100vw - 1024px) / (1024 - 768));
+    padding-bottom: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
+    padding-left:  calc(24px + (48 - 24) * (100vw - 1024px) / (1024 - 768));
   }
 }
 
+@media screen and (max-width: 768px) {
+  .intro {
+    /*padding: 88px 24px 88px 24px;*/
+    padding-top: calc(64px + (88 - 64) * (100vw - 768px) / (768 - 320));
+    padding-right: calc(16px + (24 - 16) * (100vw - 1024px) / (768 - 320));
+    padding-bottom: calc(64px + (88 - 64) * (100vw - 768px) / (768 - 320));
+    padding-left:  calc(16px + (24 - 16) * (100vw - 1024px) / (768 - 320));
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    padding: 64px 16px 64px 16px;
+  }
+}
+
+
+.intro__title {
+  margin: 0 0 40px 0;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 58px;
+  text-align: left;
+  min-height: 58px;
+  max-width: 690px;
+  /*border: 1px solid red;*/
+
+}
+
+/*@media screen and (max-width: 1280px) {
+  .intro__title {
+    min-height: calc(44px + (200 - 88) * (100vw - 320px) / (768 - 320));
+    max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
+}
+}
+
+@media screen and (max-width: 1024px) {
+  .intro__title {
+    min-height: calc(44px + (200 - 88) * (100vw - 320px) / (768 - 320));
+    max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
+    height: 58px;
+    width: 690px;
+  }
+}*/
+
 @media screen and (max-width : 768px) {
-  .lead__image {
-    height: calc(200px + (480 - 200) * (100vw - 320px) / (768 - 320));
-    width: calc(320px + (768 - 320) * (100vw - 320px) / (768 - 320));
-    /*height: 480px;
-    width: 768px;*/
+  .intro__title {
+    font-size: calc(32px + (54 - 32) * (100vw - 320px) / (768 - 320));
+    line-height: calc(35px + (58 - 35) * (100vw - 320px) / (768 - 320));
+   /* min-height: calc(44px + (200 - 88) * (100vw - 320px) / (768 - 320));
+    max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
+    height: 58px;
+    width: 720px;*/
   }
 }
 
 @media screen and (max-width : 320px) {
-  .lead__image {
-    height: 200px;
-    width: 320px;
-  }
+  .intro__title {
+    height: 70px;
+    width: 288px;
+    font-size: 32px;
+    line-height: 35px;
+}
 }
 
-.lead__caption {
+.intro__text {
+  margin: 0 0 33px 0;
+  color: #FFF;
   font-family: Inter;
-  font-size: 10px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 1.5px;
+  line-height: 26px;
   text-align: left;
-  min-height: 14px;
-  max-width: 158px;
-  margin: 8px 0 0 0;
-
+  min-height: 208px;
+  max-width: 690px;
+  /*border: 1px solid red;*/
 }
+
+.intro__list {
+  margin: 0;
+  color: #FFF;
+  list-style-type: none;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+  padding: 0;
+  height: 90px;
+  max-width: 690px;
+  /*border: 1px solid red;*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
