--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   line-height: 14px;
   text-align: left;
+  letter-spacing: 1.5px;
   min-height: 14px;
-  max-width: 158px;
   margin: 8px 0 0 0;
 }
