--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,9 +10,15 @@
   /*border: 1px solid red;*/
 }
 
+
+@media screen and (max-width: 1280px) {
+  .lead__subtitle {
+    margin-bottom: calc(56px + (64 - 56) * (100vw - 1024px) / (1280 - 1024));
+  }
+}
 @media screen and (max-width : 1024px) {
   .lead__subtitle {
-    margin-bottom: calc(56px + (64 - 56) * (100vw - 768px) / (1024 - 768));
+    margin-bottom: calc(40px + (56 - 40) * (100vw - 768px) / (1024 - 768));
   }
 }
 
