--- a/pages/index1.css
+++ b/pages/index1.css
@@ -7,7 +7,7 @@
 }
 
 .page {
-  padding: 28px 0 0 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,12 +20,6 @@
   color: #FFF;
   box-sizing: border-box;
   /*border: 1px solid red;*/
-}
-@media screen and (max-width : 320px) {
-  .page {
-    padding: 16px 0 0 0;
- }
-
 }
 
 
@@ -145,22 +139,27 @@
 
 .intro__list {
   margin: 0;
+  padding: 0;
   color: #FFF;
   list-style-type: none;
-  font-family: Inter;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  text-align: left;
-  padding: 0;
   min-height: 90px;
   max-width: 690px;
   /*border: 1px solid red;*/
 }
 
 .intro__list-item {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+.intro__list-large {
   font-weight: 700;
 }
+
 
 .photo-grid {
   margin: 0;
@@ -171,13 +170,13 @@
   width: 100%;
   grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
   /*grid-template-rows: repeat(auto-fill, minmax(213px, 1fr));*/
-  padding: 0 48px 0 48px;
+
   gap: 16px;
   box-sizing: border-box;
 
 }
 
-*@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
   .photo-grid {
 
     gap: calc(14px + (16 - 14) * (100vw - 1024px) / (1280 - 1024));
@@ -187,8 +186,7 @@
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    padding-left: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
-    padding-right: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
+
     gap: calc(14px + (16 - 14) * (100vw - 768px) / (1024 - 768));
 
     /*padding: 0 48px 0 48px;
@@ -200,8 +198,7 @@
   .photo-grid {
     gap: 16px;
     /*height: 1664px;*/
-    padding-left: calc(16px + (24 - 16) * (100vw - 768px) / (768 - 320));
-    padding-right: calc(16px + (24 - 16) * (100vw - 768px) / (768 - 320));
+
     gap: calc(12px + (16 - 12) * (100vw - 768px) / (768 - 320));
    /* padding: 0 24px 0 24px;
      gap: 16px;*/
@@ -213,8 +210,6 @@
     gap: 12px;
     height: 2724px;
     min-width: 288px;
-    padding: 0 16px 0 16px;
-
   }
 }
 
@@ -229,7 +224,7 @@
 
 .plases {
   min-height: 3392px;
-  max-width: 984px;
+
   padding: 92px 0 92px 0;
 
   width: 100%;
@@ -247,25 +242,23 @@
 @media screen and (max-width: 1024px) {
   .plases {
     min-height: 3292px;
-    max-width: 928px;
     /*padding: 92px 48px 92px 48px;*/
 
     padding-top: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
-    padding-right: calc(48px + (24 - 48) * (100vw - 768px) / (1024 - 768));
+    padding-right: calc(24px + (48 - 42) * (100vw - 768px) / (1024 - 768));
     padding-bottom: calc(90px + (92 - 90) * (100vw - 768px) / (1024 - 768));
-    padding-left:  calc(48px + (24 - 48) * (100vw - 768px) / (1024 - 768));
+    padding-left:  calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
   }
 }
 
 @media screen and (max-width: 768px) {
   .plases {
     min-height: 2808px;
-    max-width: 720px;
-    /*padding: 88px 24 90px 24;*/
+     /*padding: 88px 24 90px 24;*/
     padding-top: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
     padding-bottom: calc(66px + (90 - 66) * (100vw - 320px) / (768 - 320));
-    padding-right: calc(24px + (0 - 24) * (100vw - 320px) / (768 - 320));
-    padding-left:  calc(24px + (0 - 24) * (100vw - 320px) / (768 - 320));
+    padding-right: calc(0px + (24 - 0) * (100vw - 320px) / (768 - 320));
+    padding-left:  calc(0px + (24 - 0) * (100vw - 320px) / (768 - 320));
 
   }
 }
@@ -273,7 +266,7 @@
 @media screen and (max-width: 320px) {
   .plases {
     min-height: 5177px;
-    max-width: 320px;
+
     padding: 64px 0px 66px 0px;
 }
 }
@@ -283,6 +276,9 @@
 .plases__container {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
@@ -299,14 +295,43 @@
   row-gap: 48px;
   padding: 0;
   margin: 80px 0 0 0 ;
-
  }
 
 .plase:first-child {
   margin: 0;
 }
 
+@media screen and (max-width: 1280px) {
 
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
+
+/*@media screen and (max-width: 1280px) {
+
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}*/
 
 /*.plase__1 {
   display: grid;
@@ -514,13 +539,15 @@ display: none;
 .footer {
   /*border: 1px solid #ae00ff;*/
   height: 18px;
-  width: 1184px;
+  max-width: 1280px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin: 0;
   color: #FFF;
   box-sizing: border-box;
-  padding: 92px 0 24px 0;
+  padding-top: 92px;
+  padding-bottom: 24px;
 }
 
 
@@ -570,7 +597,31 @@ display: none;
 }
 
 
+.indent {
+  padding-left: 48px;
+  padding-right: 48px;
+}
 
+@media screen and (max-width: 1024px) {
+  .indent {
+    padding-left: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
+    padding-right: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
+  }
+}
+
+@media screen and (max-width : 768px) {
+  .indent {
+    padding-left: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
+    padding-right: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
+  }
+}
+
+@media screen and (max-width : 320px) {
+  .indent {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
 
 
 
