--- a/pages/index1.css
+++ b/pages/index1.css
@@ -46,7 +46,7 @@
   .intro {
     /*padding: 92px 442px 92px 148px;*/
     padding-right: calc(286px + (442 - 286) * (100vw - 1024px) / (1280 - 1024));
-    padding-left:  calc(48px + (148 - 48) * (100vw - 1024px) / (1280 - 1024));
+    padding-left: calc(48px + (148 - 48) * (100vw - 1024px) / (1280 - 1024));
   }
 }
 
@@ -56,7 +56,7 @@
     padding-top: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
     padding-right: calc(24px + (286 - 24) * (100vw - 768px) / (1024 - 768));
     padding-bottom: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
-    padding-left:  calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
+    padding-left: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
   }
 }
 
@@ -66,7 +66,7 @@
     padding-top: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
     padding-right: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
     padding-bottom: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
-    padding-left:  calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
+    padding-left: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
   }
 }
 
@@ -170,7 +170,6 @@
   width: 100%;
   grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
   /*grid-template-rows: repeat(auto-fill, minmax(213px, 1fr));*/
-
   gap: 16px;
   box-sizing: border-box;
 
@@ -187,7 +186,7 @@
 @media screen and (max-width: 1024px) {
   .photo-grid {
 
-    gap: calc(14px + (16 - 14) * (100vw - 768px) / (1024 - 768));
+    gap: calc(16px + (14 - 16) * (100vw - 768px) / (1024 - 768));
 
     /*padding: 0 48px 0 48px;
      gap: 14px;*/
@@ -208,7 +207,7 @@
 @media screen and (max-width : 320px) {
   .photo-grid {
     gap: 12px;
-    height: 2724px;
+    min-height: 2724px;
     min-width: 288px;
   }
 }
@@ -266,7 +265,6 @@
 @media screen and (max-width: 320px) {
   .plases {
     min-height: 5177px;
-
     padding: 64px 0px 66px 0px;
 }
 }
