--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -21,7 +21,7 @@
 @media screen and (max-width: 1024px) {
   .header {
 
-    /*padding: 28px 48px 48px 48px;*/
+   padding-bottom: 48px;
   }
 }
 
@@ -35,7 +35,7 @@
 
 @media screen and (max-width : 320px) {
   .header {
-    height: 42px;
+    min-height: 42px;
     max-width: 288px;
     padding-top: 16px;
     padding-bottom: 48px;
