--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,3 +8,25 @@
   min-height: 14px;
   margin: 8px 0 0 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__caption {
+    margin-left: calc(24px + (0 - 24) * (100vw - 768px) / (1024 - 768));
+  }
+}
+
+@media screen and (max-width : 768px) {
+  .lead__caption {
+    margin-left: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
+    /*margin-left: 24px;*/
+
+  }
+}
+
+@media screen and (max-width : 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
+}
+
+
