--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,10 @@
 .lead__image {
   /*border: 1px solid red;*/
   object-fit: cover;
-  max-height: 615px;
+  width: 100%;
+}
+
+  /*max-height: 615px;
   max-width: 984px;
 }
 
@@ -15,7 +18,7 @@
 @media screen and (max-width: 1024px) {
   .lead__image {
    /*height: 580px;
-    width: 928px;*/
+    width: 928px;/
     height: calc(480px + (580 - 480) * (100vw - 768px) / (1024 - 768));
     width: calc(760px + (984 - 768) * (100vw - 768px) / (1024 - 768));
   }
@@ -26,7 +29,7 @@
     height: calc(200px + (480 - 200) * (100vw - 320px) / (768 - 320));
     width: calc(320px + (768 - 320) * (100vw - 320px) / (768 - 320));
     /*height: 480px;
-    width: 768px;*/
+    width: 768px;/
   }
 }
 
