--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,8 +4,37 @@
   align-items: center;
   /*border: 1px solid red;*/
   color: #FFF;
-  max-height: 1005px;
   min-height: 406px;
-  max-width: 984px;
-  min-width: 320px;
+  max-width: 1280px;
+  width: 100%;
+  padding: 0 148px;
+  box-sizing: border-box;
  }
+
+ @media screen and (max-width: 1280px) {
+  .lead {
+    padding-left: calc(48px + (148 - 48) * (100vw - 1024px) / (1280 - 1024));
+    padding-right: calc(48px + (148 - 48) * (100vw - 1024px) / (1280 - 1024));
+  }
+}
+
+ @media screen and (max-width: 1024px) {
+  .lead {
+    padding-left: calc(0px + (48 - 0) * (100vw - 768px) / (1024 - 768));
+    padding-right: calc(0px + (48 - 0) * (100vw - 768px) / (1024 - 768));
+
+    /*padding: 0 48px 0 48px;*/
+  }
+}
+
+@media screen and (max-width : 768px) {
+  .lead {
+
+  }
+}
+
+@media screen and (max-width : 320px) {
+  .lead {
+    padding: 0;
+  }
+}
