--- a/pages/index1.css
+++ b/pages/index1.css
@@ -5,14 +5,14 @@
   /*border: 1px solid rgb(0, 255, 21);*/
   max-width: 1280px;
   min-width: 320px;
-}
+  }
 
 .page {
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*height: 6875px;*/
+
   width: 100%;
   max-width: 1280px;
   min-width: 320px;
@@ -303,10 +303,7 @@
   list-style-type: none;
   max-width: 984px;
   display: grid;
-  /*grid-template-rows: repeat(2, auto);
-  grid-template-columns: 460px minmax(min-content, max-content);
-  grid-template-columns: 460px 484px;
-  grid-template-rows: minmax(min-content, max-content) 460px;*/
+
   grid-template-columns: minmax(440px, 460px) minmax(min-content, max-content);
   grid-template-rows: repeat(2, minmax(min-content, max-content));
   column-gap: 40px;
@@ -340,19 +337,23 @@
 
 @media screen and (max-width: 768px) {
   .plase {
-    grid-template-columns: minmax(288px, 340px) minmax(min-content, max-content);
+    grid-template-columns: minmax(320px, 340px) minmax(min-content, max-content);
     grid-template-rows: repeat(2, minmax(min-content, max-content));
     column-gap: 28px;
+  }
+}
 
-
+@media screen and (max-width: 650px) {
+  .plase {
+    grid-template-columns: minmax(272px, 602px);
+    gap: 32px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .plase {
-    /*column-gap: px;
-    row-gap: px;
-     в полоску;*/
+    grid-template-columns: minmax(320px, min-content);
+    gap: 32px;
   }
 }
 
@@ -391,9 +392,8 @@
   .plase__title {
     font-size: 42px;
     line-height: 46px;
-    padding-left: 10px ;
+    padding-left: 10px;
   }
-
 }
 @media screen and (max-width : 320px) {
 .plase__title {
@@ -496,7 +496,6 @@
 
 .cover {
   margin: 0;
-  min-height: 740px;
   max-width: 1280px;
   width: 100%;
   padding: 0 48px;
@@ -513,6 +512,7 @@
   .cover {
   padding-left: 0;
   padding-right: 0;
+
   }
 }
 @media screen and (max-width : 768px) {
@@ -526,12 +526,12 @@
 
 .cover__link {
   width: 100%;
-  max-width: 1280px;
   min-height: 740px;
   background-image: url("../images/cover-trains.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
-  /*border: 1px solid red;*/
+  background-position: center center;
+    /*border: 1px solid red;*/
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -540,19 +540,26 @@
   justify-content: center;
   text-decoration: none;
   z-index: 1;
-}
+  overflow: hidden;
+  }
 
 @media screen and (max-width: 1280px) {
 
 }
 @media screen and (max-width : 1024px) {
-
+  .cover__link {
+    min-height: 640px;
+  }
 }
 @media screen and (max-width : 768px) {
-
+  .cover__link {
+    min-height: 480px;
+  }
 }
 @media screen and (max-width : 320px) {
-
+  .cover__link {
+    min-height: 200px;
+  }
 }
 
 .cover__link:before {
@@ -563,6 +570,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+
   transition: opacity 300ms ease-in-out;
 }
 
@@ -596,7 +604,7 @@
   z-index: 2;
 }
 .footer {
-  height: 18px;
+  min-height: 18px;
   max-width: 1280px;
   width: 100%;
   display: flex;
@@ -606,7 +614,23 @@
   box-sizing: border-box;
   padding-top: 92px;
   padding-bottom: 24px;
+ border: 1px solid red;
 
+}
+
+@media screen and (max-width : 768px) {
+  .footer {
+    padding-top: 88px;
+  }
+}
+@media screen and (max-width : 320px) {
+  .footer {
+    min-height: 310px;
+    padding-top: 64px;
+    max-width: 320px;
+    flex-direction: column;
+
+  }
 }
 
 
@@ -618,10 +642,20 @@
   margin: 0;
   padding: 0;
   color: #FFF;
-}
+  border: 1px solid rgb(162, 0, 255);
+  }
+
+  @media screen and (max-width : 320px) {
+    .footer__menu {
+      padding-top: 64px;
+      flex-direction: column;
+      column-gap: 48px;
+    }
+  }
+
 
 .footer__link {
-  /*border: 1px solid red;*/
+  border: 1px solid red;
   text-decoration: none;
   min-height: 18px;
   max-width: 50px;
@@ -632,12 +666,20 @@
   font-weight: 400;
   line-height: 18px;
   text-align: left;
-
-
 }
 
+@media screen and (max-width : 320px){
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
+
+
+
+
 .footer__copyright {
-  /*border: 1px solid red;*/
+  border: 1px solid rgb(0, 255, 21);
   margin: 0;
   height: 16px;
   min-width: 186px;
@@ -646,6 +688,14 @@
   font-weight: 400;
   line-height: 16px;
   text-align: right;
+}
+
+
+@media screen and (max-width : 320px) {
+  .footer__copyright {
+    line-height: 14px;
+    text-align: left;
+  }
 }
 
 .none
